# AI-thuc-chien

./: ARCHITECTURE.md  QUICK_START.md  VIDEO_GENERATION_OPTIMIZATION.md  async_example.py  main.py  pyproject.toml  test_imports.py  video_generation.py
Video/: index.json  main.py  pyproject.toml
examples/: README.md  advanced_batch.py  basic_example.py  batch_example.py
image/: convertation_image_generation.py  gen_image.py  image_generation.py  index.json  prompt_config.json  pyproject.toml
text/: prompt_config.json  pyproject.toml  text_generation.py
text-to-speed/: main.py  prompt_config.json
video_generation/: __init__.py  config.py  exceptions.py  generator.py  models.py  utils.py
