[project]
name = "ai-thuc-chien-starter"
version = "0.1.0"
description = "AI Thuc Chien - Advanced AI Generation Toolkit with Async/Batch Processing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
    "pydantic>=2.6.0",
    "rich>=13.7.0",
    "anyio>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]

[tool.uv.workspace]
members = [
    "Video",
]
